--- a/manifest.json
+++ b/manifest.json
@@ -13,9 +13,14 @@
 			"sizes": "48x48"
 		},
 		{
-			"src": "img/icon.png",
+			"src": "img/icon144.png",
 			"type": "image/png",
 			"sizes": "144x144"
+		},
+		{
+			"src": "img/icon192.png",
+			"type": "image/png",
+			"sizes": "192x192"
 		}
 	]
 }
